# opensips-ai-voice-connector

./: .dockerignore  .env  .env.development  .env.production  .gitignore  All CODES.py  CLEANUP_REPORT.md  CURSORRULES.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ENVIRONMENT_SETUP_STORY.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.core  Dockerfile.dev  IMPROVEMENTS_SUMMARY.md  README-new.md  README.Docker.md  README.md  RTVI_MIGRATION_GUIDE.md  SIP_CALL_GUIDE.md  TESTING.md  complete_system_e2e_test.py  debug_pipeline_flow.py  debug_rtp_flow.py  debug_start_stream.py  demo_outbound_calls.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  docker.env.example  e2e_test_results_e2e-bd31be71.json  enterprise_e2e_test.py  env.example  fix_protobuf.py  local_test_config.ini  log_level_example.py  mock_vosk_test.py  monitor.ps1  (+58 more)
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.cursor/: mcp.json
cfg/: opensips-ai-voice-connector-docker.ini  opensips-ai-voice-connector.ini  opensips.cfg  vosk.cfg
config/: app.ini  opensips.cfg
core/: __init__.py  api_server.py  main.py  test_e2e_flow.py  test_structure.py
docs/: ARCHITECTURAL_CLEANUP_PLAN.md  BUILD_OPTIMIZATION.md  CLEAN_ARCHITECTURE_SUMMARY.md  DEVELOPMENT_MODE_GUIDE.md  Docker Instructions.md  PHASE3_IMPLEMENTATION.md  PRD.md  VOSK.md  architecture.md  barge-in-flow.md  brownfield-architecture.md  brownfield-enhancement-prd.md  port-mapping.md  prd.md  smart-speech-flow.md  testing-guide.md  vosk_turkce.md
openshift/: 01-configmaps.yaml  02-oavc-deployment.yaml  (+3 more)
src/: ai.py  (+25 more)
(+362 files in other folders)
