[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensips-ai-voice-connector"
version = "0.1.0"
description = "Banking IVR Voice Assistant with Pipecat AI Pipeline"
authors = [{name = "Development Team", email = "dev@company.com"}]
readme = "README.md"
requires-python = ">=3.11"

[project.dependencies]
# Core framework dependencies
fastapi = "0.104.1"
grpcio = "1.60.0"
grpcio-tools = "1.60.0"
pydantic = "2.5.0"

# Pipecat and audio processing
pipecat-ai = {path = "./pipecat", editable = true}
pyaudio = "0.2.13"
opus-python = "1.0.1"

# Database and caching
psycopg2-binary = "2.9.9"
redis = "5.0.1"
asyncpg = "0.29.0"

# Monitoring and logging
prometheus-client = "0.19.0"
structlog = "23.2.0"

# Development tools (optional)
black = {optional = true, version = "23.12.0"}
ruff = {optional = true, version = "0.1.8"}
mypy = {optional = true, version = "1.8.0"}
pytest = {optional = true, version = "7.4.3"}
pytest-asyncio = {optional = true, version = "0.23.0"}

[project.optional-dependencies]
dev = ["black", "ruff", "mypy", "pytest", "pytest-asyncio"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
select = ["E", "F", "W", "B", "I"]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"